# ThinkBudget

./: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  VIDEO_SCRIPT.md  demo.sh  pyproject.toml
.github/workflows/: publish.yml  test.yml
benchmarks/: compare.py  run_benchmark.py
benchmarks/datasets/: complex.jsonl  deep.jsonl  generate_datasets.py  moderate.jsonl  simple.jsonl  trivial.jsonl
cloudrift/: run.sh
dashboard/: index.html
src/thinkbudget/: __init__.py  budget.py  classifier.py  cli.py  config.py  dashboard.py  demo.py  gpu_monitor.py  models.py  proxy.py
tests/: test_budget.py  test_classifier.py  test_gpu_monitor.py  test_models.py
